--- a/emmerce/resources/templates/home.html
+++ b/emmerce/resources/templates/home.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html>
-  <head>
-      <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1">
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="google-signin-client_id" content="820624577284-pnnnj9h7reov4pkk0i3n3fkiiq6s28o4.apps.googleusercontent.com">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+              rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.10/semantic.min.css">
       <title>Welcome to emmerce</title>
   </head>
   <body>
-    
+
     <div id="app">
       <div class="container-fluid">
         <div class="card-deck">
@@ -29,6 +33,7 @@
     </div>
 
     <!-- scripts and styles -->
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
     {% style "/assets/bootstrap/css/bootstrap.min.css" %}
     {% style "/assets/font-awesome/css/font-awesome.min.css" %}
     {% style "/css/screen.css" %}
