Added fast game

--- a/emmerce/resources/public/css/screen.css
+++ b/emmerce/resources/public/css/screen.css
@@ -189,3 +189,14 @@ h1 {
         transform: rotate(360deg);
     }
 }
+
+.game{
+    margin-top: 150px
+}
+.gamestyle{
+    padding : 10px;
+    width: 910px;
+    height: 600px;
+    overflow:hidden;
+    border:none;
+}
