--- a/emmerce/resources/public/css/screen.css
+++ b/emmerce/resources/public/css/screen.css
@@ -94,7 +94,7 @@ body {
 
 .game {
     width : 75%;
-    margin-top : 50px;
+    margin-top : 50px !important;
     margin-left : auto !important;
     margin-right : auto !important;
 }
@@ -102,11 +102,54 @@ body {
 .game-paper {
     height : 750px;
     padding : 50px;
+    text-align : center;
 }
 
-h1 {
-   color : #FFFFFF !important;
+.fruit-name {
+    color : #FF4081 !important;
 }
+
+.fruit-holder{
+    display : flex;
+    flex-wrap : wrap;
+     margin-top : 70px;
+    justify-content : space-around;
+}
+
+.fruit {
+    margin : 10px;
+    padding :5px;
+}
+.fruit-img {
+    width : 300px; !important;
+    height : 300px;
+}
+
+.qs-changer {
+    display :flex;
+    margin : 10px;
+    margin-top : 60px;
+    justify-content :space-around;
+}
+
+.change-btn {
+    margin : 12 !important;
+    width : 160 !important;
+    height : 60 !important;
+}
+.game-xtra{
+    margin-top: 150px
+}
+
+.gamestyle-xtra{
+    padding : 10px;
+    width: 910px;
+    height: 600px;
+    overflow:hidden;
+    border:none;
+}
+
+
 .login-btn {
     margin-top : 30px;
     color : #FFFFFF !important;
@@ -123,6 +166,7 @@ h1 {
     display:flex;
     justify-content: space-between;
 }
+
 .middle{
     display:flex;
     justify-content:center;
@@ -190,15 +234,4 @@ h1 {
         -webkit-transform: rotate(360deg);
         transform: rotate(360deg);
     }
-}
-
-.game{
-    margin-top: 150px
-}
-.gamestyle{
-    padding : 10px;
-    width: 910px;
-    height: 600px;
-    overflow:hidden;
-    border:none;
 }
